# primihub

./: .bazelrc  .bazelversion  .gitignore  .gitmodules  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.keywordpir  Dockerfile.local  Dockerfile.release  Makefile  README.md  README_CN.md  README_EN.md  Roadmap.md  VLR.py  WORKSPACE  WORKSPACE_CN  WORKSPACE_GITHUB  bazel-primihub-for-chainmaker  bazel-primihub_github  build_local.sh  client_run.sh  config.h  disxgb_en_xus.py  docker-compose-dev.yml  docker-compose.yml  hetero_xgb.py  hetero_xgb1.py  hetero_xgb_infer.py  kill_task.sh  pre_build.sh  pre_docker_build.sh  pre_keywordpir.sh  primihub_extra_deps.bzl  psi_benchmark.sh  run.sh  sparseconfig.h  start_server.sh  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backup.yaml  build-arm64.yaml  cla.yaml  docker-publish.yml  docker.yaml  main.yml  release.yaml  ubuntu-pre-build.yml
.github/workflows/feature/: workflows.yml
bazel/: BUILD.APSI  BUILD.arrow  BUILD.eigen  BUILD.function2  BUILD.gsl  BUILD.gsl_v_2_0_0  BUILD.kuku  BUILD.leveldb  BUILD.libpsi  BUILD.relic  BUILD.seal  BUILD.sparsehash  BUILD.sqlite  BUILD.stduuid  brotli.BUILD  bzip2.BUILD  cares.BUILD  cryptoTools.BUILD  curl.BUILD  deps.bzl  di.BUILD  fmt.BUILD  gmp.BUILD  hat_trie.BUILD  libOTe.BUILD  liborc.BUILD  libp2p.BUILD  lz4.BUILD  ntl.BUILD  openssl.BUILD  poco.BUILD  rapidjson.BUILD  repos.bzl  repository_deps.bzl  sgx.BUILD  snappy.BUILD  soralog.BUILD  sqlite.BUILD  thrift.BUILD  xsimd.BUILD  (+3 more)
config/: node0.yaml  node1.yaml  node2.yaml  pir_server_config.json  primihub_node0.yaml  primihub_node1.yaml  primihub_node2.yaml  redis.conf
data/: breast-cancer-wisconsin.csv  client_e.csv  client_e.db3  keyword_pir_server.csv  mpc_arithmetic_0.csv  mpc_arithmetic_1.csv  mpc_arithmetic_2.csv  mpc_test.csv  pir_server.csv  server_e.csv  server_e.db3  test_party_0.csv  test_party_1.csv  test_party_2.csv  train_party_0.csv  train_party_1.csv  train_party_2.csv
data/FL/: fake.csv  homo_lr_test.data  student_guest.data  student_host.data  student_local.data  student_test.data  wisconsin_host.data  wisconsin_test.data
data/FL/hetero_iv/: iv_guest.csv  iv_host.csv
data/FL/homo_lr/: breast_cancer.csv  test_breast_cancer.csv  train_breast_cancer.csv
data/FL/homo_nn/: mobile_price.csv
data/FL/homo_regression/: boston_house.csv
data/cert/: ca.crt  ca.csr  ca.key  ca.srl  client.crt  client.csr  client.key  gen.sh  server.crt  server.csr  server.key
data/falcon/: readme.md
data/falcon/key/: keyAB  keyB  keyBC  keyC
data/sgx/: auth.tar  ca_cert.crt  dcap_cert.pem  dcap_server.csr  primihub_sgx_test.csr  sgx.csr  sign-cert.pem  sign-cert.pem.sgx  sign.key  sign.key.sgx
data/sgx/auth/: ca_cert.crt  plainkey  plainkey.p12  sign-cert.pem  sign.key
data/sgx/dcap/: sign.key.sgx
deploy/docker-deploy/: .env  README.md  deploy.sh  docker-compose.yaml
deploy/docker-deploy/config/: default1.conf  default2.conf  default3.conf  redis.conf
doc/: build.md  error.md
e2etest/: README_CN.md
e2etest/local/: config.py  kill_node.py  port_listen.py  pre_test.py  start_node.py  test_dir.py  test_fl.py  test_mpc.py  test_pir.py  test_psi.py
example/: fl_hetero_xgb_task_conf.json  fl_homo_lr_task_conf.json  hetero_iv.json  hetero_lr.json  hetero_xgb.json  keyword_pir_db_build_task_conf.json  keyword_pir_task_conf.json  mpc_add_task_conf.json  mpc_div_task_conf.json  mpc_lr_task_conf.json  mpc_missing_value_task_conf.json  mpc_mul_task_conf.json  mpc_statistics_avg_task_conf.json  mpc_statistics_max_task_conf.json  mpc_statistics_min_task_conf.json  mpc_statistics_sum_task_conf.json  mpc_sub_task_conf.json  psi_ecdh_download_result_task_conf.json  psi_ecdh_task_conf.json  psi_ecdh_task_conf_new.json  psi_kkrt_task_conf.json  psi_kkrt_task_conf_new.json  psi_tee_task_conf.json  python_code.json  python_code_2pc.json  python_code_3pc.json  python_code_psi.json  python_task_conf.json
example/FL/example/: example.json
example/FL/linear_regression/: hfl_dpsgd.json  hfl_paillier.json  hfl_plaintext.json  hfl_predict.json  vfl_ckks.json  vfl_plaintext.json  vfl_predict.json
example/FL/logistic_regression/: hetero_lr.json  hetero_lr_infer.json  hfl_binclass_dpsgd.json  hfl_binclass_paillier.json  hfl_binclass_plaintext.json  hfl_binclass_predict.json  hfl_multiclass_dpsgd.json  hfl_multiclass_plaintext.json  hfl_multiclass_predict.json  vfl_binclass_ckks.json  vfl_binclass_plaintext.json  vfl_binclass_predict.json  vfl_multiclass_ckks.json  vfl_multiclass_plaintext.json  vfl_multiclass_predict.json
example/FL/neural_network/: hfl_binclass_dpsgd.json  hfl_binclass_plaintext.json  hfl_binclass_predict.json  hfl_cnn_multiclass_dpsgd.json  hfl_cnn_multiclass_plaintext.json  hfl_cnn_multiclass_predict.json  hfl_multiclass_dpsgd.json  hfl_multiclass_plaintext.json  hfl_multiclass_predict.json  hfl_regression_dpsgd.json  hfl_regression_plaintext.json  hfl_regression_predict.json
example/FL/preprocessing/: hetero_iv.json  hfl_kbinsdiscretizer.json  hfl_labelbinarizer.json  hfl_labelencoder.json  hfl_maxabsscaler.json  hfl_minmaxscaler.json  hfl_multilabelbinarizer.json  hfl_onehotencoder.json  hfl_ordinalencoder.json  hfl_pipeline.json  hfl_powertransformer.json  hfl_quantiletransformer.json  hfl_robustscaler.json  hfl_simpleimputer_numeric.json  hfl_simpleimputer_string.json  hfl_splinetransformer.json  hfl_standardscaler.json  hfl_targetencoder.json  hfl_transform.json  (+5 more)
example/code/: example.py  mpc_example.py  psi_example.py
example/plain_data_example/: data_align_task.json
example/register_example/: reg_dataset_meta.json
key/falcon/: IP_localhost  keyA
plugins/: hazelcast-client.yaml  seatunnel_conf.json  seatunnel_task_template.json
python/: Pipfile  README.md  demo.py  demo_disxgb.py  requirements.txt  setup.py
python/primihub/: Pipfile  __init__.py  context.py  context_new.py  executor.py  executor_xus.py  pyclient.py
test/primihub/: BUILD  test_util.h
(+1810 files in other folders)
